2_Parser/y.output
Terminals which are not used

   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 id: ID

    7 num: NUM

    8 var_declaration: INT id SEMI
    9                | VOID id SEMI
   10                | INT id LBRACE num RBRACE SEMI
   11                | VOID id LBRACE num RBRACE SEMI

   12 @1: /* empty */

   13 fun_declaration: INT id @1 LPAREN params RPAREN compound_stmt

   14 @2: /* empty */

   15 fun_declaration: VOID id @2 LPAREN params RPAREN compound_stmt

   16 params: param_list
   17       | VOID

   18 param_list: param_list COMMA param
   19           | param

   20 param: INT id
   21      | VOID id
   22      | INT id LBRACE RBRACE
   23      | VOID id LBRACE RBRACE

   24 compound_stmt: LCURLY local_declarations statement_list RCURLY

   25 local_declarations: local_declarations var_declaration
   26                   | /* empty */

   27 statement_list: statement_list statement
   28               | /* empty */

   29 statement: expression_stmt
   30          | compound_stmt
   31          | selection_stmt
   32          | iteration_stmt
   33          | return_stmt

   34 expression_stmt: expression SEMI
   35                | SEMI

   36 selection_stmt: IF LPAREN expression RPAREN statement
   37               | IF LPAREN expression RPAREN statement ELSE statement

   38 iteration_stmt: WHILE LPAREN expression RPAREN statement

   39 return_stmt: RETURN SEMI
   40            | RETURN expression SEMI

   41 expression: var ASSIGN expression
   42           | simple_expression

   43 var: id
   44    | id LBRACE expression RBRACE

   45 simple_expression: additive_expression EQ additive_expression
   46                  | additive_expression NE additive_expression
   47                  | additive_expression GT additive_expression
   48                  | additive_expression GE additive_expression
   49                  | additive_expression LT additive_expression
   50                  | additive_expression LE additive_expression
   51                  | additive_expression

   52 additive_expression: additive_expression PLUS term
   53                    | additive_expression MINUS term
   54                    | term

   55 term: term TIMES factor
   56     | term OVER factor
   57     | factor

   58 factor: LPAREN expression RPAREN
   59       | var
   60       | call
   61       | num

   62 @3: /* empty */

   63 call: id @3 LPAREN args RPAREN

   64 args: arg_list
   65     | /* empty */

   66 arg_list: arg_list COMMA expression
   67         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 36 37
ELSE (259) 37
INT (260) 8 10 13 20 22
VOID (261) 9 11 15 17 21 23
WHILE (262) 38
RETURN (263) 39 40
ID (264) 6
NUM (265) 7
ASSIGN (266) 41
EQ (267) 45
LT (268) 49
PLUS (269) 52
MINUS (270) 53
TIMES (271) 55
OVER (272) 56
LPAREN (273) 13 15 36 37 38 58 63
RPAREN (274) 13 15 36 37 38 58 63
SEMI (275) 8 9 10 11 34 35 39 40
NE (276) 46
LE (277) 50
GE (278) 48
GT (279) 47
LBRACE (280) 10 11 22 23 44
RBRACE (281) 10 11 22 23 44
LCURLY (282) 24
RCURLY (283) 24
COMMA (284) 18 66
ERROR (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declaration_list (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4 5, on right: 2 3
id (35)
    on left: 6, on right: 8 9 10 11 13 15 20 21 22 23 43 44 63
num (36)
    on left: 7, on right: 10 11 61
var_declaration (37)
    on left: 8 9 10 11, on right: 4 25
fun_declaration (38)
    on left: 13 15, on right: 5
@1 (39)
    on left: 12, on right: 13
@2 (40)
    on left: 14, on right: 15
params (41)
    on left: 16 17, on right: 13 15
param_list (42)
    on left: 18 19, on right: 16 18
param (43)
    on left: 20 21 22 23, on right: 18 19
compound_stmt (44)
    on left: 24, on right: 13 15 30
local_declarations (45)
    on left: 25 26, on right: 24 25
statement_list (46)
    on left: 27 28, on right: 24 27
statement (47)
    on left: 29 30 31 32 33, on right: 27 36 37 38
expression_stmt (48)
    on left: 34 35, on right: 29
selection_stmt (49)
    on left: 36 37, on right: 31
iteration_stmt (50)
    on left: 38, on right: 32
return_stmt (51)
    on left: 39 40, on right: 33
expression (52)
    on left: 41 42, on right: 34 36 37 38 40 41 44 58 66 67
var (53)
    on left: 43 44, on right: 41 59
simple_expression (54)
    on left: 45 46 47 48 49 50 51, on right: 42
additive_expression (55)
    on left: 52 53 54, on right: 45 46 47 48 49 50 51 52 53
term (56)
    on left: 55 56 57, on right: 52 53 54 55 56
factor (57)
    on left: 58 59 60 61, on right: 55 56 57
call (58)
    on left: 63, on right: 60
@3 (59)
    on left: 62, on right: 63
args (60)
    on left: 64 65, on right: 63
arg_list (61)
    on left: 66 67, on right: 64 66


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7


state 1

    8 var_declaration: INT . id SEMI
   10                | INT . id LBRACE num RBRACE SEMI
   13 fun_declaration: INT . id @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    id  go to state 9


state 2

    9 var_declaration: VOID . id SEMI
   11                | VOID . id LBRACE num RBRACE SEMI
   15 fun_declaration: VOID . id @2 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    id  go to state 10


state 3

    0 $accept: program . $end

    $end  shift, and go to state 11


state 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 12
    var_declaration  go to state 6
    fun_declaration  go to state 7


state 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 7

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 8

    6 id: ID .

    $default  reduce using rule 6 (id)


state 9

    8 var_declaration: INT id . SEMI
   10                | INT id . LBRACE num RBRACE SEMI
   13 fun_declaration: INT id . @1 LPAREN params RPAREN compound_stmt

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


state 10

    9 var_declaration: VOID id . SEMI
   11                | VOID id . LBRACE num RBRACE SEMI
   15 fun_declaration: VOID id . @2 LPAREN params RPAREN compound_stmt

    SEMI    shift, and go to state 16
    LBRACE  shift, and go to state 17

    $default  reduce using rule 14 (@2)

    @2  go to state 18


state 11

    0 $accept: program $end .

    $default  accept


state 12

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 13

    8 var_declaration: INT id SEMI .

    $default  reduce using rule 8 (var_declaration)


state 14

   10 var_declaration: INT id LBRACE . num RBRACE SEMI

    NUM  shift, and go to state 19

    num  go to state 20


state 15

   13 fun_declaration: INT id @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 21


state 16

    9 var_declaration: VOID id SEMI .

    $default  reduce using rule 9 (var_declaration)


state 17

   11 var_declaration: VOID id LBRACE . num RBRACE SEMI

    NUM  shift, and go to state 19

    num  go to state 22


state 18

   15 fun_declaration: VOID id @2 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 23


state 19

    7 num: NUM .

    $default  reduce using rule 7 (num)


state 20

   10 var_declaration: INT id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 24


state 21

   13 fun_declaration: INT id @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 27
    param_list  go to state 28
    param       go to state 29


state 22

   11 var_declaration: VOID id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 30


state 23

   15 fun_declaration: VOID id @2 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 31
    param_list  go to state 28
    param       go to state 29


state 24

   10 var_declaration: INT id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 32


state 25

   20 param: INT . id
   22      | INT . id LBRACE RBRACE

    ID  shift, and go to state 8

    id  go to state 33


state 26

   17 params: VOID .
   21 param: VOID . id
   23      | VOID . id LBRACE RBRACE

    ID  shift, and go to state 8

    $default  reduce using rule 17 (params)

    id  go to state 34


state 27

   13 fun_declaration: INT id @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 35


state 28

   16 params: param_list .
   18 param_list: param_list . COMMA param

    COMMA  shift, and go to state 36

    $default  reduce using rule 16 (params)


state 29

   19 param_list: param .

    $default  reduce using rule 19 (param_list)


state 30

   11 var_declaration: VOID id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 37


state 31

   15 fun_declaration: VOID id @2 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 38


state 32

   10 var_declaration: INT id LBRACE num RBRACE SEMI .

    $default  reduce using rule 10 (var_declaration)


state 33

   20 param: INT id .
   22      | INT id . LBRACE RBRACE

    LBRACE  shift, and go to state 39

    $default  reduce using rule 20 (param)


state 34

   21 param: VOID id .
   23      | VOID id . LBRACE RBRACE

    LBRACE  shift, and go to state 40

    $default  reduce using rule 21 (param)


state 35

   13 fun_declaration: INT id @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 42


state 36

   18 param_list: param_list COMMA . param

    INT   shift, and go to state 25
    VOID  shift, and go to state 43

    param  go to state 44


state 37

   11 var_declaration: VOID id LBRACE num RBRACE SEMI .

    $default  reduce using rule 11 (var_declaration)


state 38

   15 fun_declaration: VOID id @2 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 45


state 39

   22 param: INT id LBRACE . RBRACE

    RBRACE  shift, and go to state 46


state 40

   23 param: VOID id LBRACE . RBRACE

    RBRACE  shift, and go to state 47


state 41

   24 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 26 (local_declarations)

    local_declarations  go to state 48


state 42

   13 fun_declaration: INT id @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


state 43

   21 param: VOID . id
   23      | VOID . id LBRACE RBRACE

    ID  shift, and go to state 8

    id  go to state 34


state 44

   18 param_list: param_list COMMA param .

    $default  reduce using rule 18 (param_list)


state 45

   15 fun_declaration: VOID id @2 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 15 (fun_declaration)


state 46

   22 param: INT id LBRACE RBRACE .

    $default  reduce using rule 22 (param)


state 47

   23 param: VOID id LBRACE RBRACE .

    $default  reduce using rule 23 (param)


state 48

   24 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   25 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 49
    VOID  shift, and go to state 50

    $default  reduce using rule 28 (statement_list)

    var_declaration  go to state 51
    statement_list   go to state 52


state 49

    8 var_declaration: INT . id SEMI
   10                | INT . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 8

    id  go to state 53


state 50

    9 var_declaration: VOID . id SEMI
   11                | VOID . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 8

    id  go to state 54


state 51

   25 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 25 (local_declarations)


state 52

   24 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   27 statement_list: statement_list . statement

    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58
    SEMI    shift, and go to state 59
    LCURLY  shift, and go to state 41
    RCURLY  shift, and go to state 60

    id                   go to state 61
    num                  go to state 62
    compound_stmt        go to state 63
    statement            go to state 64
    expression_stmt      go to state 65
    selection_stmt       go to state 66
    iteration_stmt       go to state 67
    return_stmt          go to state 68
    expression           go to state 69
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 53

    8 var_declaration: INT id . SEMI
   10                | INT id . LBRACE num RBRACE SEMI

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 14


state 54

    9 var_declaration: VOID id . SEMI
   11                | VOID id . LBRACE num RBRACE SEMI

    SEMI    shift, and go to state 16
    LBRACE  shift, and go to state 17


state 55

   36 selection_stmt: IF . LPAREN expression RPAREN statement
   37               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 76


state 56

   38 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 77


state 57

   39 return_stmt: RETURN . SEMI
   40            | RETURN . expression SEMI

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58
    SEMI    shift, and go to state 78

    id                   go to state 61
    num                  go to state 62
    expression           go to state 79
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 58

   58 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 80
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 59

   35 expression_stmt: SEMI .

    $default  reduce using rule 35 (expression_stmt)


state 60

   24 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 24 (compound_stmt)


state 61

   43 var: id .
   44    | id . LBRACE expression RBRACE
   63 call: id . @3 LPAREN args RPAREN

    LBRACE  shift, and go to state 81

    LPAREN    reduce using rule 62 (@3)
    $default  reduce using rule 43 (var)

    @3  go to state 82


state 62

   61 factor: num .

    $default  reduce using rule 61 (factor)


state 63

   30 statement: compound_stmt .

    $default  reduce using rule 30 (statement)


state 64

   27 statement_list: statement_list statement .

    $default  reduce using rule 27 (statement_list)


state 65

   29 statement: expression_stmt .

    $default  reduce using rule 29 (statement)


state 66

   31 statement: selection_stmt .

    $default  reduce using rule 31 (statement)


state 67

   32 statement: iteration_stmt .

    $default  reduce using rule 32 (statement)


state 68

   33 statement: return_stmt .

    $default  reduce using rule 33 (statement)


state 69

   34 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 83


state 70

   41 expression: var . ASSIGN expression
   59 factor: var .

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 59 (factor)


state 71

   42 expression: simple_expression .

    $default  reduce using rule 42 (expression)


state 72

   45 simple_expression: additive_expression . EQ additive_expression
   46                  | additive_expression . NE additive_expression
   47                  | additive_expression . GT additive_expression
   48                  | additive_expression . GE additive_expression
   49                  | additive_expression . LT additive_expression
   50                  | additive_expression . LE additive_expression
   51                  | additive_expression .
   52 additive_expression: additive_expression . PLUS term
   53                    | additive_expression . MINUS term

    EQ     shift, and go to state 85
    LT     shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    NE     shift, and go to state 89
    LE     shift, and go to state 90
    GE     shift, and go to state 91
    GT     shift, and go to state 92

    $default  reduce using rule 51 (simple_expression)


state 73

   54 additive_expression: term .
   55 term: term . TIMES factor
   56     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 54 (additive_expression)


state 74

   57 term: factor .

    $default  reduce using rule 57 (term)


state 75

   60 factor: call .

    $default  reduce using rule 60 (factor)


state 76

   36 selection_stmt: IF LPAREN . expression RPAREN statement
   37               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 95
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 77

   38 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 96
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 78

   39 return_stmt: RETURN SEMI .

    $default  reduce using rule 39 (return_stmt)


state 79

   40 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 97


state 80

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 98


state 81

   44 var: id LBRACE . expression RBRACE

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 99
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 82

   63 call: id @3 . LPAREN args RPAREN

    LPAREN  shift, and go to state 100


state 83

   34 expression_stmt: expression SEMI .

    $default  reduce using rule 34 (expression_stmt)


state 84

   41 expression: var ASSIGN . expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 101
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 85

   45 simple_expression: additive_expression EQ . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 103
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 86

   49 simple_expression: additive_expression LT . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 104
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 87

   52 additive_expression: additive_expression PLUS . term

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    term    go to state 105
    factor  go to state 74
    call    go to state 75


state 88

   53 additive_expression: additive_expression MINUS . term

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    term    go to state 106
    factor  go to state 74
    call    go to state 75


state 89

   46 simple_expression: additive_expression NE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 107
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 90

   50 simple_expression: additive_expression LE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 108
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 91

   48 simple_expression: additive_expression GE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 109
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 92

   47 simple_expression: additive_expression GT . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 110
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


state 93

   55 term: term TIMES . factor

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    factor  go to state 111
    call    go to state 75


state 94

   56 term: term OVER . factor

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    factor  go to state 112
    call    go to state 75


state 95

   36 selection_stmt: IF LPAREN expression . RPAREN statement
   37               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 113


state 96

   38 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 114


state 97

   40 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 40 (return_stmt)


state 98

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


state 99

   44 var: id LBRACE expression . RBRACE

    RBRACE  shift, and go to state 115


state 100

   63 call: id @3 LPAREN . args RPAREN

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    $default  reduce using rule 65 (args)

    id                   go to state 61
    num                  go to state 62
    expression           go to state 116
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75
    args                 go to state 117
    arg_list             go to state 118


state 101

   41 expression: var ASSIGN expression .

    $default  reduce using rule 41 (expression)


state 102

   59 factor: var .

    $default  reduce using rule 59 (factor)


state 103

   45 simple_expression: additive_expression EQ additive_expression .
   52 additive_expression: additive_expression . PLUS term
   53                    | additive_expression . MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 45 (simple_expression)


state 104

   49 simple_expression: additive_expression LT additive_expression .
   52 additive_expression: additive_expression . PLUS term
   53                    | additive_expression . MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 49 (simple_expression)


state 105

   52 additive_expression: additive_expression PLUS term .
   55 term: term . TIMES factor
   56     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 52 (additive_expression)


state 106

   53 additive_expression: additive_expression MINUS term .
   55 term: term . TIMES factor
   56     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 53 (additive_expression)


state 107

   46 simple_expression: additive_expression NE additive_expression .
   52 additive_expression: additive_expression . PLUS term
   53                    | additive_expression . MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 46 (simple_expression)


state 108
